config/samples/gateway.networking_v1_gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  labels:
    app.kubernetes.io/name: minecraft-gateway
    app.kubernetes.io/managed-by: kustomize
  name: minefleet-gatewayclass-sample
spec:
  controllerName: minefleet.dev/gateway-controller
