config/samples/example_gameserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: minecraft-gateway
    app.kubernetes.io/managed-by: kustomize
    app: example-gameserver
  name: example-gameserver
spec:
  selector:
    matchLabels:
      app: example-gameserver
  template:
    metadata:
      labels:
        app: example-gameserver
    spec:
      containers:
        - name: minecraft
          image: itzg/minecraft-server:2026.9.0-java25-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: minecraft
              containerPort: 25565
          volumeMounts:
            - name: patch-config
              mountPath: /patches
      volumes:
        - name: patch-config
          configMap:
            name: minecraft-patch-config
