config/samples/lobby.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: minecraft-gateway
    app.kubernetes.io/managed-by: kustomize
    app: lobby
  name: lobby
spec:
  selector:
    matchLabels:
      app: lobby
  template:
    metadata:
      labels:
        app: lobby
    spec:
      containers:
        - name: minecraft
          image: itzg/minecraft-server:2026.9.0-java25-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: minecraft
              containerPort: 25565
          volumeMounts:
            - name: patch-config
              mountPath: /patches
      volumes:
        - name: patch-config
          configMap:
            name: minecraft-patch-config
