config/samples/minecraft_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: minecraft-gateway
    app.kubernetes.io/managed-by: kustomize
    app: minecraft-sample
  name: minecraft-deployment-sample
spec:
  selector:
    matchLabels:
      app: minecraft-sample
  template:
    metadata:
      labels:
        app: minecraft-sample
    spec:
      containers:
        - name: minecraft
          image: itzg/minecraft-server:2026.1.1-java21-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: minecraft
              containerPort: 25565
          volumeMounts:
            - name: patch-config
              mountPath: /patches
      volumes:
        - name: patch-config
          configMap:
            name: minecraft-patch-config
