config/samples/example_gameserver_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: minecraft-gateway
    app.kubernetes.io/managed-by: kustomize
    minefleet.dev/environment: sample
  name: example-gameserver
spec:
  selector:
    app: example-gameserver
  ports:
    - name: minecraft
      port: 25565
      targetPort: 25565
