config/samples/gateway.networking_v1_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: minecraft-gateway
    app.kubernetes.io/managed-by: kustomize
  name: minefleet-gateway-sample
spec:
  gatewayClassName: minefleet-gatewayclass-sample
  infrastructure:
    parametersRef:
      group: gateway.networking.minefleet.dev
      kind: NetworkInfrastructure
      name: infrastructure-sample
  listeners:
    - name: "minecraft"
      hostname: "*.localhost"
      port: 25565
      protocol: minecraft-java
      allowedRoutes:
        kinds:
          - kind: MinecraftFallbackRoute
            group: gateway.networking.minefleet.dev
          - kind: MinecraftJoinRoute
            group: gateway.networking.minefleet.dev
        namespaces:
          from: Same
